# naa-communication-library

./: .editorconfig  .gitattributes  .gitignore  .gitlab-ci.yml  CITATION.cff  CMakeLists.txt  LICENSE  Makefile  Readme.md  ci-build.sh  compile_commands.json  dataframe.csv  do_client.py  do_server.py  docs.yml  ema_plot.py  fpga.csv  logfile  notes_florian.txt  output.csv  plot.py  pyproject.toml  server.csv
.cache/clangd/index/: debug.h.FCCB6FD6A05BAD86.idx  naaice.h.2A5433EADFC097E9.idx  naaice_swnaa.c.C5D15727778DF744.idx  naaice_swnaa.h.5CDF02225BD00151.idx  ulog.h.825EB37BD6B1B510.idx
.github/workflows/: deploy_docu.yml
docs/: Doxyfile
docs/doxygen/html/: annotated.html  classes.html  dir_97aefd0d527b934f1d99a682da8fe6a9.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  group__Functions.html  group__PublicFunctions.html  group__StructsEnums.html  group__connection__event__handlers.html  group__defines.html  index.html  menudata.js  naaice_8h.html  naaice_8h__dep__incl.dot  naaice_8h__incl.dot  naaice_8h_source.html  naaice__ap2_8h.html  naaice__ap2_8h__incl.dot  naaice__ap2_8h_source.html  naaice__swnaa_8h.html  naaice__swnaa_8h__incl.dot  naaice__swnaa_8h_source.html  structnaa__handle-members.html  structnaa__handle.html  structnaa__handle__coll__graph.dot  structnaa__param__t-members.html  structnaa__param__t.html  structnaa__status-members.html  structnaa__status.html  structnaaice__communication__context-members.html  structnaaice__communication__context.html  (+22 more)
docs/doxygen/html/search/: all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  functions_0.js  groups_0.js  groups_1.js  groups_2.js  groups_3.js  groups_4.js  groups_5.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  (+9 more)
docs/doxygen/latex/: annotated.tex  dir_97aefd0d527b934f1d99a682da8fe6a9.tex  files.tex  group__Functions.tex  group__PublicFunctions.dot  group__PublicFunctions.tex  group__PublicFunctions.tex.tmp  group__StructsEnums.tex  group__connection__event__handlers.dot  group__connection__event__handlers.tex  group__defines.tex  naaice_8h.tex  naaice_8h.tex.tmp  naaice_8h__dep__incl.dot  naaice_8h__incl.dot  naaice_8h_source.tex  naaice__ap2_8h.tex  naaice__ap2_8h__incl.dot  naaice__ap2_8h_source.tex  naaice__swnaa_8h.tex  naaice__swnaa_8h__incl.dot  naaice__swnaa_8h_source.tex  refman.tex  structnaa__handle.tex  structnaa__handle__coll__graph.dot  structnaa__param__t.tex  structnaa__status.tex  structnaaice__communication__context.tex  structnaaice__communication__context__coll__graph.dot  structnaaice__mr__advertisement.tex  structnaaice__mr__advertisement__request.tex  structnaaice__mr__dynamic__hdr.tex  structnaaice__mr__error.tex  structnaaice__mr__hdr.tex  structnaaice__mr__internal.tex  structnaaice__mr__local.tex  structnaaice__mr__peer.tex  structnaaice__mr__request.tex  structnaaice__rpc__metadata.tex  topics.tex
docs/doxygen/xml/: Doxyfile.xml  dir_97aefd0d527b934f1d99a682da8fe6a9.xml  group__Functions.xml  group__PublicFunctions.xml  group__StructsEnums.xml  group__connection__event__handlers.xml  group__defines.xml  index.xml  naaice_8h.xml  naaice__ap2_8h.xml  naaice__swnaa_8h.xml  structnaa__handle.xml  structnaa__param__t.xml  structnaa__status.xml  structnaaice__communication__context.xml  structnaaice__mr__advertisement.xml  structnaaice__mr__advertisement__request.xml  structnaaice__mr__dynamic__hdr.xml  structnaaice__mr__error.xml  structnaaice__mr__hdr.xml  structnaaice__mr__internal.xml  structnaaice__mr__local.xml  structnaaice__mr__peer.xml  structnaaice__mr__request.xml  structnaaice__rpc__metadata.xml
docs/source/: conf.py  index.rst
docs/source/api/: installation.rst  introduction.rst  low_level.rst  middleware.rst  swnaa.rst
examples/: CMakeLists.txt  naaice_client.c  naaice_client_ap2.c  naaice_client_ema.c  naaice_multi_server.c  naaice_server.c
kernels/: swnaa_kernels.c  swnaa_kernels.h
lib/: CMakeLists.txt  config.h.in  debug.h  naaice-config.cmake.in  naaice.c  naaice.h  naaice_ap2.c  naaice_ap2.h  naaice_ap2_cpp.h  naaice_swnaa.c  naaice_swnaa.h  ulog.c  ulog.h
src/: CMakeLists.txt  naaice_client.c  naaice_client_ap2.c  naaice_client_ema.c  naaice_client_multipleconnections.c  naaice_server.c  naaice_server_multipleconnections.c
tests/: CMakeLists.txt  ci-build.sh  do_client.py  do_server.py  evaluation.py  fpga_reference.csv  naaice_client_low_level_measurement.c  naaice_client_middleware_measurement.c  naaice_server.c  naaice_server_measurement.c  run_client.sh  run_multiple_clients.sh
